--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 opacity: 0.3;
             }
         }
+
+        @media only screen and (max-width: 768px) {
+            body {
+                margin-top: 30px;
+            }
+        }
     </style>
 </head>
 
