--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
             body {
                 margin-top: 30px;
             }
+
+            #countdown {
+            font-size: 1rem;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            white-space: pre-line;
+        }
         }
     </style>
 </head>
