--- a/index.html
+++ b/index.html
@@ -80,11 +80,18 @@
             }
 
             #countdown {
-            font-size: 1rem;
-            margin-top: 20px;
-            margin-bottom: 20px;
-            white-space: pre-line;
-        }
+                font-size: 1.2rem;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                white-space: pre-line;
+
+
+                p {
+                    font-size: 1.1rem;
+                    font-style: italic;
+                    margin: 20px 0;
+                }
+            }
         }
     </style>
 </head>
