--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <img src="https://i.imgur.com/nKQpcJM.gif" alt="Imagem do casal">
     <div id="countdown">Calculando...</div>
     <p>"It's Friday, I'm in love." - The Cure</p>
-    <img src="https://i.imgur.com/N85gsrP.png" alt="Imagem do casal">
+    <img src="https://i.imgur.com/iO4mAJH.png" alt="Imagem do casal">
 
     <script>
         function calculateTime() {
